[project]
name = "shared_memory"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"atomics",
"numpy"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
shared_memory = { path = ".", editable = true }

